[gd_scene load_steps=94 format=2]

[ext_resource path="res://Scripts/Hero.gd" type="Script" id=1]
[ext_resource path="res://Assets/Hero/Idle Blinking/Idle Blinking_008.png" type="Texture" id=2]
[ext_resource path="res://Assets/Hero/Idle Blinking/Idle Blinking_004.png" type="Texture" id=3]
[ext_resource path="res://Assets/Hero/Idle Blinking/Idle Blinking_006.png" type="Texture" id=4]
[ext_resource path="res://Assets/Hero/Idle Blinking/Idle Blinking_016.png" type="Texture" id=5]
[ext_resource path="res://Assets/Hero/Idle Blinking/Idle Blinking_005.png" type="Texture" id=6]
[ext_resource path="res://Assets/Hero/Idle Blinking/Idle Blinking_002.png" type="Texture" id=7]
[ext_resource path="res://Assets/Hero/Idle Blinking/Idle Blinking_011.png" type="Texture" id=8]
[ext_resource path="res://Assets/Hero/Idle Blinking/Idle Blinking_014.png" type="Texture" id=9]
[ext_resource path="res://Assets/Hero/Idle Blinking/Idle Blinking_017.png" type="Texture" id=10]
[ext_resource path="res://Assets/Hero/Idle Blinking/Idle Blinking_003.png" type="Texture" id=11]
[ext_resource path="res://Assets/Hero/Idle Blinking/Idle Blinking_010.png" type="Texture" id=12]
[ext_resource path="res://Assets/Hero/Idle Blinking/Idle Blinking_013.png" type="Texture" id=13]
[ext_resource path="res://Assets/Hero/Idle Blinking/Idle Blinking_009.png" type="Texture" id=14]
[ext_resource path="res://Assets/Hero/Idle Blinking/Idle Blinking_012.png" type="Texture" id=15]
[ext_resource path="res://Assets/Hero/Idle Blinking/Idle Blinking_015.png" type="Texture" id=16]
[ext_resource path="res://Assets/Hero/Idle Blinking/Idle Blinking_007.png" type="Texture" id=17]
[ext_resource path="res://Assets/Hero/Idle Blinking/Idle Blinking_000.png" type="Texture" id=18]
[ext_resource path="res://Assets/Hero/Idle Blinking/Idle Blinking_001.png" type="Texture" id=19]
[ext_resource path="res://Assets/Hero/Walking/Walking_004.png" type="Texture" id=20]
[ext_resource path="res://Assets/Hero/Walking/Walking_018.png" type="Texture" id=21]
[ext_resource path="res://Assets/Hero/Walking/Walking_000.png" type="Texture" id=22]
[ext_resource path="res://Assets/Hero/Walking/Walking_008.png" type="Texture" id=23]
[ext_resource path="res://Assets/Hero/Walking/Walking_013.png" type="Texture" id=24]
[ext_resource path="res://Assets/Hero/Walking/Walking_002.png" type="Texture" id=25]
[ext_resource path="res://Assets/Hero/Walking/Walking_019.png" type="Texture" id=26]
[ext_resource path="res://Assets/Hero/Walking/Walking_015.png" type="Texture" id=27]
[ext_resource path="res://Assets/Hero/Walking/Walking_001.png" type="Texture" id=28]
[ext_resource path="res://Assets/Hero/Walking/Walking_006.png" type="Texture" id=29]
[ext_resource path="res://Assets/Hero/Walking/Walking_023.png" type="Texture" id=30]
[ext_resource path="res://Assets/Hero/Walking/Walking_010.png" type="Texture" id=31]
[ext_resource path="res://Assets/Hero/Walking/Walking_014.png" type="Texture" id=32]
[ext_resource path="res://Assets/Hero/Walking/Walking_011.png" type="Texture" id=33]
[ext_resource path="res://Assets/Hero/Walking/Walking_021.png" type="Texture" id=34]
[ext_resource path="res://Assets/Hero/Walking/Walking_007.png" type="Texture" id=35]
[ext_resource path="res://Assets/Hero/Walking/Walking_009.png" type="Texture" id=36]
[ext_resource path="res://Assets/Hero/Walking/Walking_012.png" type="Texture" id=37]
[ext_resource path="res://Assets/Hero/Walking/Walking_016.png" type="Texture" id=38]
[ext_resource path="res://Assets/Hero/Walking/Walking_003.png" type="Texture" id=39]
[ext_resource path="res://Assets/Hero/Walking/Walking_017.png" type="Texture" id=40]
[ext_resource path="res://Assets/Hero/Walking/Walking_022.png" type="Texture" id=41]
[ext_resource path="res://Assets/Hero/Walking/Walking_020.png" type="Texture" id=42]
[ext_resource path="res://Assets/Hero/Walking/Walking_005.png" type="Texture" id=43]
[ext_resource path="res://Assets/Hero/Jump Start/Jump Start_001.png" type="Texture" id=44]
[ext_resource path="res://Assets/Hero/Jump Start/Jump Start_004.png" type="Texture" id=45]
[ext_resource path="res://Assets/Hero/Jump Start/Jump Start_005.png" type="Texture" id=46]
[ext_resource path="res://Assets/Hero/Jump Start/Jump Start_002.png" type="Texture" id=47]
[ext_resource path="res://Assets/Hero/Jump Start/Jump Start_003.png" type="Texture" id=48]
[ext_resource path="res://Assets/Hero/Jump Loop/Jump Loop_001.png" type="Texture" id=49]
[ext_resource path="res://Assets/Hero/Jump Loop/Jump Loop_004.png" type="Texture" id=50]
[ext_resource path="res://Assets/Hero/Jump Start/Jump Start_000.png" type="Texture" id=51]
[ext_resource path="res://Assets/Hero/Jump Loop/Jump Loop_000.png" type="Texture" id=52]
[ext_resource path="res://Assets/Hero/Jump Loop/Jump Loop_003.png" type="Texture" id=53]
[ext_resource path="res://Assets/Hero/Jump Loop/Jump Loop_002.png" type="Texture" id=54]
[ext_resource path="res://Assets/Hero/Jump Loop/Jump Loop_005.png" type="Texture" id=55]
[ext_resource path="res://Assets/Hero/Falling Down/Falling Down_000.png" type="Texture" id=56]
[ext_resource path="res://Assets/Hero/Falling Down/Falling Down_001.png" type="Texture" id=57]
[ext_resource path="res://Assets/Hero/Falling Down/Falling Down_002.png" type="Texture" id=58]
[ext_resource path="res://Assets/Hero/Falling Down/Falling Down_003.png" type="Texture" id=59]
[ext_resource path="res://Assets/Hero/Falling Down/Falling Down_004.png" type="Texture" id=60]
[ext_resource path="res://Assets/Hero/Falling Down/Falling Down_005.png" type="Texture" id=61]
[ext_resource path="res://Assets/Hero/Running/Running_006.png" type="Texture" id=62]
[ext_resource path="res://Assets/Hero/Running/Running_004.png" type="Texture" id=63]
[ext_resource path="res://Assets/Hero/Running/Running_002.png" type="Texture" id=64]
[ext_resource path="res://Assets/Hero/Running/Running_003.png" type="Texture" id=65]
[ext_resource path="res://Assets/Hero/Running/Running_010.png" type="Texture" id=66]
[ext_resource path="res://Assets/Hero/Running/Running_009.png" type="Texture" id=67]
[ext_resource path="res://Assets/Hero/Running/Running_011.png" type="Texture" id=68]
[ext_resource path="res://Assets/Hero/Running/Running_008.png" type="Texture" id=69]
[ext_resource path="res://Assets/Hero/Running/Running_001.png" type="Texture" id=70]
[ext_resource path="res://Assets/Hero/Running/Running_000.png" type="Texture" id=71]
[ext_resource path="res://Assets/Hero/Running/Running_007.png" type="Texture" id=72]
[ext_resource path="res://Assets/Hero/Running/Running_005.png" type="Texture" id=73]
[ext_resource path="res://Assets/Hero/Dying/Dying_000.png" type="Texture" id=74]
[ext_resource path="res://Assets/Hero/Dying/Dying_008.png" type="Texture" id=75]
[ext_resource path="res://Assets/Hero/Dying/Dying_010.png" type="Texture" id=76]
[ext_resource path="res://Assets/Hero/Dying/Dying_009.png" type="Texture" id=77]
[ext_resource path="res://Assets/Hero/Dying/Dying_004.png" type="Texture" id=78]
[ext_resource path="res://Assets/Hero/Dying/Dying_006.png" type="Texture" id=79]
[ext_resource path="res://Assets/Hero/Dying/Dying_007.png" type="Texture" id=80]
[ext_resource path="res://Assets/Hero/Dying/Dying_014.png" type="Texture" id=81]
[ext_resource path="res://Assets/Hero/Dying/Dying_012.png" type="Texture" id=82]
[ext_resource path="res://Assets/Hero/Dying/Dying_011.png" type="Texture" id=83]
[ext_resource path="res://Assets/Hero/Dying/Dying_001.png" type="Texture" id=84]
[ext_resource path="res://Assets/Hero/Dying/Dying_005.png" type="Texture" id=85]
[ext_resource path="res://Assets/Hero/Dying/Dying_003.png" type="Texture" id=86]
[ext_resource path="res://Assets/Hero/Dying/Dying_002.png" type="Texture" id=87]
[ext_resource path="res://Assets/Hero/Dying/Dying_013.png" type="Texture" id=88]
[ext_resource path="res://Assets/Sound/Jump.mp3" type="AudioStream" id=89]
[ext_resource path="res://Assets/Sound/Bump.mp3" type="AudioStream" id=90]
[ext_resource path="res://Assets/Sound/Die.mp3" type="AudioStream" id=91]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 18 ), ExtResource( 19 ), ExtResource( 7 ), ExtResource( 11 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 17 ), ExtResource( 2 ), ExtResource( 14 ), ExtResource( 12 ), ExtResource( 8 ), ExtResource( 15 ), ExtResource( 13 ), ExtResource( 9 ), ExtResource( 16 ), ExtResource( 5 ), ExtResource( 10 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 74 ), ExtResource( 84 ), ExtResource( 87 ), ExtResource( 86 ), ExtResource( 78 ), ExtResource( 85 ), ExtResource( 79 ), ExtResource( 80 ), ExtResource( 75 ), ExtResource( 77 ), ExtResource( 76 ), ExtResource( 83 ), ExtResource( 82 ), ExtResource( 88 ), ExtResource( 81 ) ],
"loop": true,
"name": "dying",
"speed": 5.0
}, {
"frames": [ ExtResource( 22 ), ExtResource( 28 ), ExtResource( 25 ), ExtResource( 39 ), ExtResource( 20 ), ExtResource( 43 ), ExtResource( 29 ), ExtResource( 35 ), ExtResource( 23 ), ExtResource( 36 ), ExtResource( 31 ), ExtResource( 33 ), ExtResource( 37 ), ExtResource( 24 ), ExtResource( 32 ), ExtResource( 27 ), ExtResource( 38 ), ExtResource( 40 ), ExtResource( 21 ), ExtResource( 26 ), ExtResource( 42 ), ExtResource( 34 ), ExtResource( 41 ), ExtResource( 30 ) ],
"loop": true,
"name": "walking",
"speed": 5.0
}, {
"frames": [ ExtResource( 56 ), ExtResource( 57 ), ExtResource( 58 ), ExtResource( 59 ), ExtResource( 60 ), ExtResource( 61 ) ],
"loop": true,
"name": "falling",
"speed": 5.0
}, {
"frames": [ ExtResource( 71 ), ExtResource( 70 ), ExtResource( 64 ), ExtResource( 65 ), ExtResource( 63 ), ExtResource( 73 ), ExtResource( 62 ), ExtResource( 72 ), ExtResource( 69 ), ExtResource( 67 ), ExtResource( 66 ), ExtResource( 68 ) ],
"loop": true,
"name": "running",
"speed": 5.0
}, {
"frames": [ ExtResource( 51 ), ExtResource( 44 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 45 ), ExtResource( 46 ) ],
"loop": true,
"name": "climbing",
"speed": 3.0
}, {
"frames": [ ExtResource( 51 ), ExtResource( 44 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 52 ), ExtResource( 49 ), ExtResource( 54 ), ExtResource( 53 ), ExtResource( 50 ), ExtResource( 55 ) ],
"loop": true,
"name": "jumping",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=1]
radius = 205.0
height = 160.0

[node name="Hero" type="KinematicBody2D"]
scale = Vector2( 0.1, 0.1 )
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "walking"
frame = 13
speed_scale = 3.0
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 4.99998, 4.99995 )
shape = SubResource( 1 )

[node name="HitTimer" type="Timer" parent="."]
wait_time = 0.581
one_shot = true

[node name="DieTimer" type="Timer" parent="."]
one_shot = true

[node name="SoundJump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 89 )
volume_db = -35.0

[node name="SoundBump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 90 )
volume_db = -10.0

[node name="SoundDie" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 91 )
volume_db = -10.0

[connection signal="timeout" from="HitTimer" to="." method="_on_HitTimer_timeout"]
[connection signal="timeout" from="DieTimer" to="." method="_on_DieTimer_timeout"]
